[add] fetch groups list data

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,6 +27,7 @@
     <group>
         <item
             android:id="@+id/manage_group"
+            android:icon="@drawable/ic_baseline_group"
             android:title="Manage Group" />
     </group>
 
