[Group Dialogs] - [Add add group member dialog, fix some warnings]

--- a/app/src/main/res/layout/add_group_member_dialog.xml
+++ b/app/src/main/res/layout/add_group_member_dialog.xml
@@ -7,13 +7,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/group_name">
+        android:text="@string/member_email">
     </TextView>
     <EditText
-        android:id="@+id/edtGroupName"
+        android:id="@+id/edtMemberEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:singleLine="true">
     </EditText>
 
