--- a/app/src/main/res/layout/new_add_dialog.xml
+++ b/app/src/main/res/layout/new_add_dialog.xml
@@ -5,12 +5,13 @@
     android:padding="25dp"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Group Name">
     </TextView>
     <EditText
-        android:id="@+id/edtGroupName"
+        android:id="@+id/edtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true">
