--- a/app/src/main/res/layout/set_password_fragment.xml
+++ b/app/src/main/res/layout/set_password_fragment.xml
@@ -25,7 +25,8 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:textColorHint="#D38F8E8E"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:singleLine="true"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,7 +47,8 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:textColorHint="#D38F8E8E"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:singleLine="true"/>
 
     <Button
         android:id="@+id/save_pass_btn"
