--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="20dp"
@@ -12,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Passkeeper"
+        android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="48sp"
         android:textColor="#0077B6"
@@ -20,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="@string/email"
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="#9A9A9A"
@@ -30,13 +28,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:hint="Email"
+        android:hint="@string/email"
         android:textColorHint="#D38F8E8E"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:inputType="textEmailAddress"
+        android:singleLine="true"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Password"
+        android:text="@string/password"
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="#9A9A9A"
@@ -45,11 +45,13 @@
         android:id="@+id/password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="@string/password"
         android:textSize="18sp"
         android:textColorHint="#D38F8E8E"
         android:layout_marginTop="8dp"
-        android:drawableRight="@drawable/ic_show_password"/>
+        android:drawableEnd="@drawable/ic_show_password"
+        android:inputType="textPassword"
+        android:singleLine="true"/>
 
     <Button
         android:id="@+id/login"
@@ -57,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
         android:background="@drawable/bg_button"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@color/white"/>
 
     <LinearLayout
@@ -69,18 +71,18 @@
             android:id="@+id/forgot_password"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="Forgot password?"
+            android:text="@string/forgot_password"
             android:textSize="18sp"
             android:textColor="#9A9A9A"
-            android:layout_marginLeft="40dp"/>
+            android:layout_marginStart="40dp"/>
         <TextView
             android:id="@+id/sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
+            android:text="@string/sign_up"
             android:textSize="18sp"
             android:textColor="#0077B6"
-            android:layout_marginLeft="84dp"/>
+            android:layout_marginStart="84dp"/>
     </LinearLayout>
 
 
