--- a/app/src/main/res/layout/add_card_fragment.xml
+++ b/app/src/main/res/layout/add_card_fragment.xml
@@ -8,60 +8,68 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="@string/name"
         android:textColor="#9A9A9A"
         android:textStyle="bold" >
     </TextView>
     <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:singleLine="true">
     </EditText>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cardholder Name"
+        android:text="@string/cardholder_name"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
     <EditText
         android:id="@+id/cardholderName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:singleLine="true">
     </EditText>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Card Number"
+        android:text="@string/card_number"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
     <EditText
         android:id="@+id/cardNumber"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:singleLine="true">
     </EditText>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Expiration day"
+        android:text="@string/expiration_day"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
     <EditText
         android:id="@+id/expirationDay"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:singleLine="true">
     </EditText>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Note"
+        android:text="@string/note"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
@@ -74,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Tags"
+        android:text="@string/tags"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
@@ -87,6 +95,8 @@
     <EditText
         android:id="@+id/tags"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:singleLine="true">
     </EditText>
 </LinearLayout>
