--- a/app/src/main/res/layout/add_note_fragment.xml
+++ b/app/src/main/res/layout/add_note_fragment.xml
@@ -16,7 +16,8 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text">
+        android:inputType="text"
+        android:singleLine="true">
     </EditText>
 
     <TextView
@@ -53,6 +54,8 @@
     <EditText
         android:id="@+id/tags"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:singleLine="true">
     </EditText>
 </LinearLayout>
