--- a/app/src/main/res/layout/add_password_fragment.xml
+++ b/app/src/main/res/layout/add_password_fragment.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="@string/name"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
     <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:singleLine="true">
     </EditText>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Username"
+        android:text="@string/username"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
     <EditText
         android:id="@+id/username"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:singleLine="true">
     </EditText>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Password"
+        android:text="@string/password"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
@@ -42,13 +45,15 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/check_eye_arrows_list">
+        android:drawableEnd="@drawable/check_eye_arrows_list"
+        android:inputType="textVisiblePassword"
+        android:singleLine="true">
     </EditText>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="URLs"
+        android:text="@string/urls"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
@@ -56,7 +61,9 @@
         android:id="@+id/urls"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/ic_delete">
+        android:drawableEnd="@drawable/ic_delete"
+        android:inputType="textUri"
+        android:singleLine="true">
     </EditText>
 
     <Button
@@ -64,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/bg_button"
-        android:text="New URL"
+        android:text="@string/new_url"
         android:textColor="@color/white">
     </Button>
 
@@ -72,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Tags"
+        android:text="@string/tags"
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
@@ -85,6 +92,8 @@
     <EditText
         android:id="@+id/tags"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:singleLine="true">
     </EditText>
 </LinearLayout>
