--- a/app/src/main/res/layout/activity_list_member_group.xml
+++ b/app/src/main/res/layout/activity_list_member_group.xml
@@ -20,6 +20,17 @@
             app:popupTheme="@style/Theme.Passkeeper.PopupOverlay"
             app:title="Members"
             app:titleMarginStart="30dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/delete_group_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:layout_alignParentRight="true"
+                    android:text="Delete group"/>
+            </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
