--- a/app/src/main/res/layout/activity_list_member_group.xml
+++ b/app/src/main/res/layout/activity_list_member_group.xml
@@ -23,13 +23,18 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <Button
                     android:id="@+id/delete_group_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
                     android:layout_alignParentRight="true"
-                    android:text="Delete group"/>
+                    style="?android:borderlessButtonStyle"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:text="Delete group" />
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
