--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,8 @@
         android:textSize="18sp"
         android:textColorHint="#D38F8E8E"
         android:layout_marginTop="8dp"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        android:inputType="textPassword"/>
 
     <Button
         android:id="@+id/login"
