--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -48,4 +48,10 @@
             app:argType="string"
             android:defaultValue="note" />
     </fragment>
+
+    <fragment
+        android:id="@+id/nav_fav"
+        android:name="com.example.passkeeper.ui.listRecord.ListFavRecordFragment"
+        android:label="Favorite"
+        tools:layout="@layout/list_record_fragment" />
 </navigation>
