[add] star & delete record in detail view

--- a/app/src/main/res/layout/item_member_group.xml
+++ b/app/src/main/res/layout/item_member_group.xml
@@ -23,9 +23,9 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="55dp"
+        android:background="@drawable/owner_toggle"
         android:textOff=""
-        android:textOn=""
-        android:background="@drawable/owner_toggle"/>
+        android:textOn="" />
 
     <Button
         android:id="@+id/delete_button"
