[ADD] List Share Group

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,6 +32,10 @@
     </group>
 
    <group>
+       <item
+           android:id="@+id/share_group"
+           android:icon="@drawable/ic_share_group"
+           android:title="Share Group" />
         <item
             android:id="@+id/manage_group"
             android:icon="@drawable/ic_baseline_groups"
