[ADD] list record group (Have bug 401)

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,7 +27,7 @@
     <group>
         <item
             android:id="@+id/nav_fav"
-            android:icon="@drawable/ic_fill_start"
+            android:icon="@drawable/ic_fill_star"
             android:title="@string/favorite" />
     </group>
 
