--- a/app/src/main/res/layout/add_password_fragment.xml
+++ b/app/src/main/res/layout/add_password_fragment.xml
@@ -16,8 +16,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:singleLine="true">
+        android:singleLine="true"
+        android:background="@android:color/transparent">
     </EditText>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/black" />
 
     <TextView
         android:layout_width="match_parent"
@@ -31,8 +37,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:singleLine="true">
+        android:singleLine="true"
+        android:background="@android:color/transparent">
     </EditText>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/black" />
 
     <TextView
         android:layout_width="match_parent"
@@ -41,14 +53,45 @@
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
-    <EditText
-        android:id="@+id/password"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/check_eye_arrows_list"
-        android:inputType="textVisiblePassword"
-        android:singleLine="true">
-    </EditText>
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/password"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textVisiblePassword"
+            android:singleLine="true"
+            android:background="@android:color/transparent">
+        </EditText>
+
+        <ImageButton
+            android:id="@+id/passwordCheck"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_check" />
+        <ImageButton
+            android:id="@+id/passwordShow"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_eye" />
+        <ImageButton
+            android:id="@+id/passwordGenerate"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_compare_arrows" />
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/black" />
+
 
     <TextView
         android:layout_width="match_parent"
@@ -57,14 +100,31 @@
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
-    <EditText
-        android:id="@+id/urls"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/ic_delete"
-        android:inputType="textUri"
-        android:singleLine="true">
-    </EditText>
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/urls"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textUri"
+            android:singleLine="true"
+            android:background="@android:color/transparent">
+        </EditText>
+        <ImageButton
+            android:id="@+id/urlDelete"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_delete" />
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/black" />
 
     <Button
         android:layout_width="match_parent"
@@ -94,6 +154,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:singleLine="true">
+        android:singleLine="true"
+        android:background="@android:color/transparent">
     </EditText>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/black" />
 </LinearLayout>
