--- a/app/src/main/res/layout/view_card_fragment.xml
+++ b/app/src/main/res/layout/view_card_fragment.xml
@@ -32,13 +32,24 @@
         android:textColor="#9A9A9A"
         android:textStyle="bold">
     </TextView>
-
-    <TextView
-        android:id="@+id/cardholderName"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:drawableEndCompat="@drawable/ic_copy_blue">
-    </TextView>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/cardholderName"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </TextView>
+        <ImageButton
+            android:id="@+id/cardholderNameCopy"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_copy" />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -54,12 +65,24 @@
         android:textStyle="bold">
     </TextView>
 
-    <TextView
-        android:id="@+id/cardNumber"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:drawableEndCompat="@drawable/ic_copy_blue">
-    </TextView>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/cardNumber"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </TextView>
+        <ImageButton
+            android:id="@+id/cardNumberCopy"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_copy" />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -75,12 +98,24 @@
         android:textStyle="bold">
     </TextView>
 
-    <TextView
-        android:id="@+id/expirationDay"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:drawableEndCompat="@drawable/ic_copy_blue">
-    </TextView>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/expirationDay"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </TextView>
+        <ImageButton
+            android:id="@+id/expirationDayCopy"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_copy" />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -96,12 +131,24 @@
         android:textStyle="bold">
     </TextView>
 
-    <TextView
-        android:id="@+id/note"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:drawableEndCompat="@drawable/ic_copy_blue">
-    </TextView>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/note"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </TextView>
+        <ImageButton
+            android:id="@+id/noteCopy"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_copy" />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
