--- a/app/src/main/res/layout/view_note_fragment.xml
+++ b/app/src/main/res/layout/view_note_fragment.xml
@@ -33,12 +33,24 @@
         android:textStyle="bold">
     </TextView>
 
-    <TextView
-        android:id="@+id/note"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:drawableEndCompat="@drawable/ic_copy_blue">
-    </TextView>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/note"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </TextView>
+        <ImageButton
+            android:id="@+id/noteCopy"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_copy" />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
