--- a/app/src/main/res/layout/view_password_fragment.xml
+++ b/app/src/main/res/layout/view_password_fragment.xml
@@ -31,17 +31,29 @@
         android:textColor="#9A9A9A"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/username"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:drawableEndCompat="@drawable/ic_copy_blue" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/username"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </TextView>
+        <ImageButton
+            android:id="@+id/usernameCopy"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_copy" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="@android:color/black" />
+        android:background="@android:color/black"
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -51,17 +63,41 @@
         android:textColor="#9A9A9A"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/password"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:drawableEndCompat="@drawable/check_eye_copy_list" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/password"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </TextView>
+        <ImageButton
+            android:id="@+id/passwordCheck"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_check" />
+        <ImageButton
+            android:id="@+id/passwordShow"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_eye" />
+        <ImageButton
+            android:id="@+id/passwordCopy"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_copy" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="@android:color/black" />
+        android:background="@android:color/black"
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -71,16 +107,34 @@
         android:textColor="#9A9A9A"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/urls"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:drawableEndCompat="@drawable/open_link_copy_list" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/urls"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </TextView>
+        <ImageButton
+            android:id="@+id/urlsOpen"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_open_link" />
+        <ImageButton
+            android:id="@+id/urlsCopy"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_copy" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="@android:color/black" />
+        android:background="@android:color/black"
+        android:layout_marginTop="5dp"/>
 
 </LinearLayout>
